# pm_voice

./: .gitignore  pyproject.toml
src/api/: server.py
src/api/core/services/: websocket_service.py
src/api/middleware/: hmac_verification.py
src/api/modules/deepgram/: dependencies.py  service.py
src/api/modules/interactions/: ws.py
src/api/modules/websocket/: dependencies.py  service.py
src/api/services/: state_service.py
src/api/websocket/: connections.py  transport.py
src/core/dependencies/: configure_container.py
src/core/services/web_socket/: dependencies.py  service.py
src/core/utils/decorators/: error_handler.py
src/dependencies/: agents.py  services.py
src/libs/infrastructure/dependencies/: configure_container.py
src/public/: index.html
src/shared/application/use_cases/: stream_tts.py
src/shared/dependencies/: configure_container.py  services.py
src/shared/domain/: models.py
src/shared/infrastructure/: deepgram_speech_to_text_service.py  deepgram_text_to_speech_service.py
src/shared/services/web_socket/: dependencies.py
src/shared/utils/decorators/: error_handler.py
src/utils/decorators/: error_handler.py
src/workflow/: base_agent.py  graph.py  state.py
src/workflow/agents/data_collection/: agent.py  data_collector.py  dependencies.py  models.py
src/workflow/agents/orchestrator/: orchestrator_agent.py
src/workflow/graphs/: graph.py
src/workflow/graphs/subgraphs/: appointments_graph.py  client_data_graph.py  invenstment_data_graph.py
src/workflow/modules/appointments/: agent.py  dependencies.py  graph.py  models.py
src/workflow/modules/client_data/: agent.py  dependencies.py  models.py
src/workflow/services/: prompt_service.py
src/workflow/vapi/: vapi_models.py  vapi_service.py
src/workflows/: dependencies.py  graph.py  models.py  state.py
src/workflows/application/: prompt_service.py
src/workflows/core/: graph.py
src/workflows/domain/: entities.py  models.py
tests/integration/: test_google_calendar_service.py
(+133 files in other folders)
