[project]
name = "agent-pm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepgram-sdk>=4.8.1",
    "fastapi[standard]>=0.117.1",
    "google-api-python-client>=2.183.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "librosa>=0.11.0",
    "openai>=1.108.1",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "qdrant-client>=1.15.1",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]
